# rust-actix-web-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  env.example
src/: main.rs
src/constants/: config.rs  mod.rs  utility.rs
src/middleware/: guard_middleware.rs  mod.rs
src/models/: test_models.rs
src/routes/: test.rs
src/services/: google_cloud_authentication.rs  mod.rs
