[package]
name = "rust_actix_web_template"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
futures-util = "0.3.30"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"
env_logger = "0.11.5"
lettre = "0.11.7"
lettre_email = "0.9.4"
reqwest = { version = "0.12.5", features = ["json"] }
url = "2.5.2"
pulldown-cmark = "0.11.0"
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["sync"] }